Add openapi generator
