# src/main/java/org/siri_hate/chat_service/controller/PrivateChatController.java
@@ -1,8 +1,9 @@
 package org.siri_hate.chat_service.controller;
 
-import org.siri_hate.chat_service.model.dto.request.private_chat.PrivateChatRequest;
-import org.siri_hate.chat_service.model.dto.response.private_chat.PrivateChatResponse;
 import org.siri_hate.chat_service.service.PrivateChatService;
+import org.siri_hate.main_service.api.PrivateChatApi;
+import org.siri_hate.main_service.dto.PrivateChatRequestDTO;
+import org.siri_hate.main_service.dto.PrivateChatResponseDTO;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
@@ -10,8 +11,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
-@RequestMapping("/api/v1/chat_service/private_chats")
-public class PrivateChatController {
+public class PrivateChatController implements PrivateChatApi {
 
     private final PrivateChatService privateChatService;
 
@@ -19,32 +19,31 @@ public class PrivateChatController {
         this.privateChatService = privateChatService;
     }
 
-    @PostMapping
-    public ResponseEntity<PrivateChatResponse> createPrivateChat(@RequestBody PrivateChatRequest request) {
+    @Override
+    public ResponseEntity<PrivateChatResponseDTO> createPrivateChat(PrivateChatRequestDTO privateChatRequestDTO) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String firstUsername = authentication.getName();
-
-        PrivateChatResponse response = privateChatService.createPrivateChat(request, firstUsername);
+        var response = privateChatService.createPrivateChat(privateChatRequestDTO, firstUsername);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
 
-    @GetMapping("/{id}")
-    public ResponseEntity<PrivateChatResponse> getPrivateChatById(@PathVariable Long id) {
-        PrivateChatResponse response = privateChatService.getPrivateChatById(id);
-        return ResponseEntity.ok(response);
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deletePrivateChat(@PathVariable Long id) {
+    @Override
+    public ResponseEntity<Void> deletePrivateChat(Long id) {
         privateChatService.deletePrivateChat(id);
         return ResponseEntity.noContent().build();
     }
 
-    @PatchMapping("/{id}/toggle_visibility")
-    public ResponseEntity<Void> togglePrivateChatVisibility(@PathVariable Long id) {
+    @Override
+    public ResponseEntity<PrivateChatResponseDTO> getPrivateChat(Long id) {
+        var response = privateChatService.getPrivateChatById(id);
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> togglePrivateChatVisibility(Long id) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String username = authentication.getName();
         privateChatService.togglePrivateChatVisibility(id, username);
-        return ResponseEntity.noContent().build();
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 } 
