# src/main/java/org/siri_hate/chat_service/controller/WebSocketController.java
@@ -1,10 +1,10 @@
 package org.siri_hate.chat_service.controller;
 
-import org.siri_hate.chat_service.model.dto.request.MessageRequest;
-import org.siri_hate.chat_service.model.dto.request.SubscribeRequest;
 import org.siri_hate.chat_service.model.entity.Message;
 import org.siri_hate.chat_service.service.ChatService;
 import org.siri_hate.chat_service.service.MessageService;
+import org.siri_hate.main_service.dto.MessageRequestDTO;
+import org.siri_hate.main_service.dto.SubscribeRequestDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.messaging.handler.annotation.DestinationVariable;
 import org.springframework.messaging.handler.annotation.MessageMapping;
@@ -27,21 +27,23 @@ public class WebSocketController {
     @Autowired
     public WebSocketController(SimpMessagingTemplate messagingTemplate,
                                MessageService messageService,
-                               ChatService chatService) {
+                               ChatService chatService
+    )
+    {
         this.messagingTemplate = messagingTemplate;
         this.messageService = messageService;
         this.chatService = chatService;
     }
 
     @MessageMapping("/chat/{chatId}/send")
-    public void sendMessage(@DestinationVariable Long chatId, @Payload @Validated MessageRequest request, Principal principal) {
+    public void sendMessage(@DestinationVariable Long chatId, @Payload @Validated MessageRequestDTO request, Principal principal) {
         String sender = principal.getName();
         Message message = messageService.saveMessage(request, sender);
         messagingTemplate.convertAndSend("/topic/chat/" + chatId, message);
     }
 
     @MessageMapping("/chat/subscribe")
-    public void subscribeToChat(@Payload @Validated SubscribeRequest request) {
+    public void subscribeToChat(@Payload @Validated SubscribeRequestDTO request) {
         chatService.getChatById(request.getChatId());
         List<Message> messages = messageService.getMessagesByChatId(request.getChatId());
         messagingTemplate.convertAndSend("/topic/chat/" + request.getChatId() + "/history", messages);
